drm/amdgpu/gfx10: ignore rlc ucode validation

There are apparently ucode versions in the wild with incorrect
sizes specified in the header.  We never checked this before,
so don't start now.

Bug: https://gitlab.freedesktop.org/drm/amd/-/issues/2170
Reviewed-by: Guchun Chen <guchun.chen@amd.com>
Signed-off-by: Alex Deucher <alexander.deucher@amd.com>